--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.2.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
     "@react-three/drei": "^9.99.5",
     "@react-three/fiber": "^8.15.16",
+    "@shadcn/ui": "^0.0.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.14.1",
     "lucide-react": "^0.344.0",
@@ -20,6 +26,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "sonner": "^1.4.3",
+    "tailwind-variants": "^0.3.1",
     "three": "^0.162.0"
   },
   "devDependencies": {
